--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -15,11 +15,11 @@ license = "piny940's license"
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
-modId = "modsample" #mandatory
+modId = "examplemod" #mandatory
 # The version number of the mod
 version = "0.1.0" #mandatory
 # A display name for the mod
-displayName = "Sample Mod" #mandatory
+displayName = "Example Mod" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://docs.minecraftforge.net/en/latest/misc/updatechecker/
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
@@ -38,21 +38,27 @@ authors = "piny940" #optional
 # IMPORTANT NOTE: this is NOT an instruction as to which environments (CLIENT or DEDICATED SERVER) your mod loads on. Your mod should load (and maybe do nothing!) whereever it finds itself.
 #displayTest="MATCH_VERSION" # MATCH_VERSION is the default if nothing is specified (#optional)
 
-# [[dependencies.${mod_id}]]#optionalmodId="forge" #mandatorymandatory=true #mandatoryversionRange="${forge_version_range}" #mandatory# A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.description = '''${mod_description}'''ordering = "NONE"
-# side = "BOTH"
-# [[dependencies.${mod_id}]]
-# modId = "minecraft"
-# mandatory = true
-# versionRange = "${minecraft_version_range}"
-# ordering = "NONE"
-# side = "BOTH"
 # The description text for the mod (multi line!) (#mandatory)
+description = '''${mod_description}'''
+# A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
+[[dependencies.examplemod]] #optional
 # the modid of the dependency
+modId = "forge" #mandatory
 # Does this dependency have to exist - if not, ordering below must be specified
+mandatory = true #mandatory
 # The version range of the dependency
+versionRange = "${forge_version_range}" #mandatory
 # An ordering relationship for the dependency - BEFORE or AFTER required if the dependency is not mandatory
 # BEFORE - This mod is loaded BEFORE the dependency
 # AFTER - This mod is loaded AFTER the dependency
+ordering = "NONE"
 # Side this dependency is applied on - BOTH, CLIENT, or SERVER
+side = "BOTH"
 # Here's another dependency
+[[dependencies.examplemod]]
+modId = "minecraft"
+mandatory = true
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
+versionRange = "${minecraft_version_range}"
+ordering = "NONE"
+side = "BOTH"
